--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 10:19:00 AM</p>
+    <p class="lastupdate">09/09/2020 10:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">62.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">62.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">61.9&#176;F</td>
+        <td class="data">62.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">76%</td>
+        <td class="data">75%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.853 inHg (0.050)</td>
+        <td class="data">29.854 inHg (0.045)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">0 mph N/A (   N/A)</td>
+        <td class="data">1 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="01:05:37 AM">
+          <span title="10:19:50 AM">
             54.3</span><br/>
           <span title="06:45:15 AM">
             49.9</span>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:09:02 AM">
-            29.853</span><br/>
+          <span title="10:22:02 AM">
+            29.857</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 19 hours, 32 minutes</td>
+      <td class="data">7 days, 19 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 19 hours, 32 minutes</td>
+      <td class="data">7 days, 19 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
