--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 10:29:00 AM</p>
+    <p class="lastupdate">09/09/2020 10:34:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">62.6&#176;F</td>
+        <td class="data">62.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.2&#176;F</td>
+        <td class="data">54.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (0.048)</td>
+        <td class="data">29.856 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NNE (22&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:25:40 AM">
+          <span title="10:33:52 AM">
             54.5</span><br/>
           <span title="06:45:15 AM">
             49.9</span>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="10:25:02 AM">
-            29.858</span><br/>
+          <span title="10:29:02 AM">
+            29.859</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          359
+          360
         </td>
         <td class="data new_row hilo_week">
           0<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 19 hours, 42 minutes</td>
+      <td class="data">7 days, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 19 hours, 42 minutes</td>
+      <td class="data">7 days, 19 hours, 47 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
