--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 10:44:00 AM</p>
+    <p class="lastupdate">09/09/2020 10:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">63.3&#176;F</td>
+        <td class="data">63.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.9&#176;F</td>
+        <td class="data">54.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">74%</td>
+        <td class="data">73%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.858 inHg (0.050)</td>
+        <td class="data">29.859 inHg (0.040)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="10:43:54 AM">
-            54.9</span><br/>
+          <span title="10:44:16 AM">
+            55.0</span><br/>
           <span title="06:45:15 AM">
             49.9</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 19 hours, 57 minutes</td>
+      <td class="data">7 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 19 hours, 57 minutes</td>
+      <td class="data">7 days, 20 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
