--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 11:19:00 AM</p>
+    <p class="lastupdate">09/09/2020 11:24:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">65.3&#176;F</td>
+        <td class="data">65.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">55.3&#176;F</td>
+        <td class="data">55.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.866 inHg (0.042)</td>
+        <td class="data">29.868 inHg (0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNW (338&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.5&#176;F</td>
+        <td class="data">75.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM">
-            65.4</span><br/>
+          <span title="11:22:42 AM">
+            65.6</span><br/>
           <span title="07:08:29 AM">
             56.5</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:00:01 AM" class="hival">
-            65.4</span>
+          <span title="11:22:42 AM" class="hival">
+            65.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,7 +235,7 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:04:36 AM">
+          <span title="11:22:42 AM">
             55.5</span><br/>
           <span title="06:45:15 AM">
             49.9</span>
@@ -303,8 +303,8 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:16:02 AM">
-            29.866</span><br/>
+          <span title="11:23:02 AM">
+            29.868</span><br/>
           <span title="12:01:01 AM">
             29.700</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 20 hours, 32 minutes</td>
+      <td class="data">7 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 20 hours, 32 minutes</td>
+      <td class="data">7 days, 20 hours, 37 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
