--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/09/2020 12:09:00 PM</p>
+    <p class="lastupdate">09/09/2020 12:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">70.7&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">70.7&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">70.7&#176;F</td>
+        <td class="data">71.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">57.5&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">63%</td>
+        <td class="data">62%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.861 inHg (0.027)</td>
+        <td class="data">29.860 inHg (0.022)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">1 mph SE (135&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">75.6&#176;F</td>
+        <td class="data">75.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Last quarter<br/>
-            55%</td>
+            54%</td>
         </tr>
       </table>
     </div>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="12:09:00 PM">
-            70.7</span><br/>
+          <span title="12:13:48 PM">
+            71.4</span><br/>
           <span title="07:08:29 AM">
             56.5</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="12:09:00 PM" class="hival">
-            70.7</span>
+          <span title="12:13:48 PM" class="hival">
+            71.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:04:42 PM (Sunday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="12:05:04 PM">
-            57.5</span><br/>
+          <span title="12:11:44 PM">
+            57.9</span><br/>
           <span title="06:45:15 AM">
             49.9</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="07:23:09 AM">
             85</span><br/>
-          <span title="12:00:01 AM">
-            63</span>
+          <span title="12:11:52 PM">
+            62</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:23:09 AM (Wednesday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">7 days, 21 hours, 22 minutes</td>
+      <td class="data">7 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">7 days, 21 hours, 22 minutes</td>
+      <td class="data">7 days, 21 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
